0.20-a2 (devel.20): Now compatible with Java 11+